syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.breez.service";
option java_outer_classname = "BreezProto";

package breez;

service Information {
  rpc Ping (PingRequest) returns (PingReply) {}
}

service MempoolNotifier {
  rpc MempoolRegister (MempoolRegisterRequest) returns (MempoolRegisterReply) {}
}

service FundManager {
    rpc OpenChannel (OpenChannelRequest) returns (OpenChannelReply) {}
    rpc AddFund (AddFundRequest) returns (AddFundReply) {}
    rpc AddFundStatus (AddFundStatusRequest) returns (AddFundStatusReply) {}
    rpc RemoveFund (RemoveFundRequest) returns (RemoveFundReply) {}
    rpc GetPayment (GetPaymentRequest) returns (GetPaymentReply) {}
    rpc PaySwapInvoice (PaySwapInvoiceRequest) returns (PaySwapInvoiceReply) {}
    rpc GetRefunds (GetRefundsRequest) returns (GetRefundsReply) {}
}

message OpenChannelRequest {
    string pubKey = 1;
}

message OpenChannelReply {}

message AddFundRequest {
    bytes paymentHash = 1;
    bytes chainPublicKey = 2;
    string notificationToken = 3;
    string lightningNodeId = 4;
}

message AddFundReply {
    string address = 1;
    bytes chainPublicKey = 2;
    int64 maxAllowedDeposit = 3;
    string errorMessage = 4;
}

message PaySwapInvoiceRequest {
    string paymentRequest = 1;
}

message PaySwapInvoiceReply {
    string preimage = 1;
}

message AddFundStatusRequest {
    repeated string addresses = 1;
    string notificationToken = 2;
}

message AddFundStatusReply {
    message AddressStatus {
        string tx = 1;
        int64 amount = 2;
        bool confirmed = 3;
        string blockHash = 4;
    }
    map<string, AddressStatus> statuses = 1;
}

message RemoveFundRequest {
    string address = 1;
    int64 amount = 2;
}

message RemoveFundReply {
}

message GetPaymentRequest {
  string paymentRequest = 1;
  string address = 2;
}

message GetPaymentReply {
  string paymentError = 1;
}

message GetRefundsRequest {
    string notificationToken = 1;
}

message GetRefundsReply {
    message RefundStatus {
        string tx = 1;
        int64 amount = 2;
        string blockHash = 4;
    }
    map<string, RefundStatus> refunds = 1;
}

message MempoolRegisterRequest {
  string clientID = 1;
  repeated string addresses = 2;
}

message MempoolRegisterReply {
  message Transaction {
      string TX = 1;
      string Address = 2;
      double Value = 3;
  }
  repeated Transaction TXS = 1;
}

message PingRequest {
}

message PingReply {
  string version = 1;
}
